2016-11-14	"I shot an arrow in to the air, and it stuck."  (2)

		include/innocent-pear/bbq.h :
		- added innocent_pear::ops::under_ptrace

		include/innocent-pear/kthxbai.h :
		- for Linux target, now includes results of rofl<...>::ptrace
		  (...) in scrambling if under_ptrace active

		include/innocent-pear/lolwut.h :
		- now only uses `.subsection' directive for ELF target

		include/innocent-pear/rofl.h :
		- fixed handling of rofl<...>::ptrace(PT_TRACE_ME, , , ) in
		  debug mode
		- minor fix in rofl_impl_prctl<...>

		share/innocent-pear/doge-i.h ,
		share/innocent-pear/doge-01.cc ,
		share/innocent-pear/doge-02.cc ,
		share/innocent-pear/doge-03.cc ,
		share/innocent-pear/doge-04.cc ,
		share/innocent-pear/doge-05.cc ,
		share/innocent-pear/doge-06.cc ,
		share/innocent-pear/doge-07.cc :
		- now using innocent_pear::ops::under_ptrace
		- factored out scrambling flags from .cc files to doge-i.h

2016-11-13	"I shot an arrow in to the air, and it stuck."

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/omg.h :
		- use a variant of Duff's Device to get all the weird cases to
		  fall back to the default case and nothing else

2016-11-08	"A child of five could understand this!  Fetch me a child of
		 five."

		infra/KeccakCodePackage.tar.xz ,
		infra/lolwutconf.tar.xz :
		- added backup packages (mainly to work around issue where
		  GitHub's release packages do not include submodules)

		configure :
		- now unpacks infra/KeccakCodePackage.tar.xz and infra/
		  lolwutconf.tar.xz if submodules are not already present

		GNUmakefile :
		- `make distclean' now cleans away submodule directories if
		  they were unpacked from infra/*.tar.xz
		- now includes lolwutconf.mk from $(conf_Lolwutconf_dir)

		lolwutconf/ :
		- bumped to d090d6a1d5

2016-11-06	Let static relocations lie.  (2)

		include/innocent-pear/lolwut.h :
		- for ARM,
		  - now makes sure that lolwut_impl<...>::Disp is even,
		    to work around a bug (?) in binutils in handling Thumb